# r2

./: .dockerignore  .gitignore  CHANGES_SUMMARY.txt  COMMPASS_QUICK_START.md  DATA_ACQUISITION_FIXES.md  DELIVERY_CHECKLIST.md  IMPLEMENTATION.md  IMPLEMENTATION_GUIDE.md  MODELS.md  MODULES_SUMMARY.txt  Makefile  PREPROCESSING_CHECKLIST.md  PREPROCESSING_IMPLEMENTATION.md  README.md  README_DATA_ACQUISITION.md  README_IMPLEMENTATION.txt  VISUALIZATION_NOTEBOOKS_GUIDE.md  main.py  pyproject.toml  requirements.txt  requirements_preprocessing.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml
config/: mlflow_setup.py  pipeline_config.yaml  preprocessing_config.json
docker/: Dockerfile  apptainer.def
docs/: PREPROCESSING_GUIDE.md  hypothesis_document.md  literature_review.md
examples/: quickstart.py
notebooks/: 01_data_exploration.py  02_pathway_analysis.py  03_cross_study_alignment.py  04_model_comparison.py  05_biological_interpretation.py  06_benchmark_report.py
scripts/: __init__.py  download_geo_data.py  evaluate_cross_study.py  generate_report.py  preprocess_all.py  run_preprocessing.py  train_baselines.py  train_fusion.py  train_modern.py
src/evaluation/: benchmark.py  metrics.py  splits.py
src/models/baselines/: base_model.py  de_enrichment.py  elastic_net_cox.py  gradient_boosting_survival.py  lasso_cox.py  random_survival_forest.py  sparse_group_lasso_cox.py
src/models/fusion/: __init__.py  late_fusion.py  multimodal_attention.py
src/models/modern/: __init__.py  autoresearch_agent.py  deepsurv.py  domain_adversarial.py  pathway_autoencoder.py  tabpfn_classifier.py  training_utils.py
src/preprocessing/: __init__.py  data_contract.py  download_geo.py  harmonization.py  normalization.py  pathway_scoring.py  probe_mapping.py  quality_control.py
src/utils/: checkpoint_manager.py  config.py  logging_setup.py  pipeline_diagram.py  reporting.py  visualization.py
tests/: test_models.py  test_modern_models.py  test_preprocessing.py
workflows/nextflow/: main.nf  nextflow.config
workflows/nextflow/processes/: data_download.nf  evaluation.nf  modeling.nf  pathway_analysis.nf  preprocessing.nf  reporting.nf
workflows/snakemake/: Snakefile
